--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -23,7 +23,7 @@
             />
     <item
             android:id="@+id/verb_game"
-            android:title="werkwoordspel"
+            android:title="🤷 Werkwoord Game"
             />
     <item
             android:id="@+id/menu_about"
