--- a/app/src/main/res/layout/verb_game.xml
+++ b/app/src/main/res/layout/verb_game.xml
@@ -5,6 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".VerbGame"
+        tools:ignore="HardcodedText"
         >
     <TextView
             android:id="@+id/text_ask"
@@ -41,19 +42,21 @@
             android:id="@+id/btn_go"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
             android:layout_marginBottom="16dp"
             android:text="@string/volgende"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             />
     <Button
-            android:id="@+id/btn_reveal"
+            android:id="@+id/btn_show_ladder"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:layout_marginBottom="16dp"
             android:text="@string/laat_zien"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/btn_go"
+            app:layout_constraintStart_toStartOf="parent"
             />
     <Switch
             android:id="@+id/sw_mode"
@@ -61,18 +64,22 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="8dp"
-            android:text="vervoegen "
+            android:text="Vervoegen "
+            android:textColor="?attr/colorAccent"
+            android:textSize="16sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/divider3"
             app:layout_constraintStart_toStartOf="parent"
             />
     <TextView
-            android:id="@+id/textView"
+            android:id="@+id/lbl_herken"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginBottom="12dp"
-            android:text="herkennen"
+            android:text="Herkennen"
             android:textColor="@android:color/background_dark"
+            android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@+id/divider3"
             app:layout_constraintStart_toEndOf="@+id/sw_mode"
             />
@@ -166,8 +173,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:checked="true"
+            android:onClick="onPersonClick"
             android:text="εγώ"
-            android:textSize="18sp"
+            android:textSize="14sp"
             app:layout_constraintBottom_toTopOf="@+id/chk_2"
             app:layout_constraintStart_toEndOf="@+id/divider4"
             />
@@ -176,8 +184,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:onClick="onPersonClick"
             android:text="εσύ"
-            android:textSize="18sp"
+            android:textSize="14sp"
             app:layout_constraintBottom_toTopOf="@+id/chk_3"
             app:layout_constraintStart_toEndOf="@+id/divider4"
             />
@@ -186,8 +195,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:onClick="onPersonClick"
             android:text="αυτός, -ή, -ό"
-            android:textSize="18sp"
+            android:textSize="14sp"
             app:layout_constraintBottom_toTopOf="@+id/chk_4"
             app:layout_constraintStart_toEndOf="@+id/divider4"
             />
@@ -196,8 +206,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:onClick="onPersonClick"
             android:text="εμείς"
-            android:textSize="18sp"
+            android:textSize="14sp"
             app:layout_constraintBottom_toTopOf="@+id/chk_5"
             app:layout_constraintStart_toEndOf="@+id/divider4"
             />
@@ -206,18 +217,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:onClick="onPersonClick"
             android:text="εσείς"
-            android:textSize="18sp"
+            android:textSize="14sp"
             app:layout_constraintBottom_toTopOf="@+id/chk_6"
             app:layout_constraintStart_toEndOf="@+id/divider4"
+
             />
     <CheckBox
             android:id="@+id/chk_6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:onClick="onPersonClick"
             android:text="αυτοί, -ές, -ά"
-            android:textSize="18sp"
+            android:textSize="14sp"
             app:layout_constraintBottom_toTopOf="@+id/divider2"
             app:layout_constraintStart_toEndOf="@+id/divider4"
             />
@@ -230,5 +244,62 @@
             app:layout_constraintBottom_toTopOf="@+id/divider2"
             app:layout_constraintStart_toEndOf="@+id/chk_paratatikos"
             app:layout_constraintTop_toBottomOf="@+id/divider3"
+            app:layout_constraintVertical_bias="1.0"
+            />
+    <View
+            android:id="@+id/divider6"
+            android:layout_width="1dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="8dp"
+            android:background="?android:attr/listDivider"
+            app:layout_constraintBottom_toTopOf="@+id/divider2"
+            app:layout_constraintStart_toEndOf="@+id/chk_6"
+            app:layout_constraintTop_toBottomOf="@+id/divider3"
+            app:layout_constraintVertical_bias="0.0"
+            />
+    <TextView
+            android:id="@+id/lbl_level"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:layout_marginBottom="0dp"
+            android:background="@color/labelBackground"
+            android:paddingStart="3dp"
+            android:paddingEnd="3dp"
+            android:text="@string/level"
+            android:textColor="@color/border_color"
+            android:textStyle="bold"
+            app:layout_constraintTop_toBottomOf="@id/divider3"
+            app:layout_constraintStart_toEndOf="@id/divider6"
+        />
+    <Switch
+            android:id="@+id/sw_level_basis"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:text="@string/basis"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/lbl_level"
+            />
+    <Switch
+            android:id="@+id/sw_level_gevorderd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:text="@string/advanced"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/sw_level_basis"
+            />
+    <Switch
+            android:id="@+id/sw_level_ballast"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:text="@string/nice_to_know"
+            app:layout_constraintTop_toBottomOf="@+id/sw_level_gevorderd"
+            app:layout_constraintEnd_toEndOf="parent"
             />
 </androidx.constraintlayout.widget.ConstraintLayout>
