--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,11 +4,13 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/main_background"
         tools:context=".MainActivity"
         tools:ignore="ContentDescription, Autofill"
         >
 
     <TextView
+            android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -55,45 +57,46 @@
             />
     <ImageButton
             android:id="@+id/btn_OpenDeck"
-            style="@style/Widget.AppCompat.ImageButton"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginBottom="4dp"
-            android:background="#E0F7FA"
+            style="@android:style/Widget.ImageButton"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:contentDescription="@string/open_flashcards"
-            android:elevation="3dp"
-            android:paddingTop="4dp"
-            android:paddingBottom="4dp"
-            android:scaleType="centerInside"
+            android:scaleType="centerCrop"
             android:src="@drawable/flash"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             />
     <ImageButton
             android:id="@+id/btn_hangman"
-            style="@style/Widget.AppCompat.ImageButton"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="4dp"
-            android:background="#E3F2FD"
+            style="@android:style/Widget.ImageButton"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:contentDescription="@string/play_hangman"
-            android:elevation="3dp"
-            android:paddingTop="4dp"
-            android:paddingBottom="4dp"
-            android:scaleType="centerInside"
+            android:scaleType="centerCrop"
             android:src="@drawable/galgje"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            />
+    <ImageButton
+            android:id="@+id/btn_verb_game"
+            style="@android:style/Widget.ImageButton"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:contentDescription="Werkwoordjes oefenen"
+            android:scaleType="centerCrop"
+            android:src="@drawable/werkinuitvoering"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/btn_hangman"
+            app:layout_constraintStart_toEndOf="@+id/btn_OpenDeck"
             />
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginBottom="8dp"
+            android:background="@android:color/white"
             android:scrollbars="none"
-            app:layout_constraintBottom_toTopOf="@+id/btn_OpenDeck"
+            app:layout_constraintBottom_toTopOf="@+id/text_search"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/divider"
@@ -113,33 +116,34 @@
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
             android:labelFor="@id/text_search"
             android:text="@string/caption_search"
-            app:layout_constraintBottom_toTopOf="@+id/text_search"
-            app:layout_constraintStart_toEndOf="@+id/btn_OpenDeck"
+            app:layout_constraintBottom_toTopOf="@+id/btn_OpenDeck"
+            app:layout_constraintEnd_toStartOf="@+id/text_search"
+            app:layout_constraintTop_toBottomOf="@+id/recycler_view"
             />
     <EditText
             android:id="@+id/text_search"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/btn_clear"
-            app:layout_constraintStart_toEndOf="@+id/btn_OpenDeck"
             android:layout_marginStart="4dp"
             android:layout_marginBottom="8dp"
+            android:background="@android:color/white"
             android:ems="10"
             android:gravity="start|top"
             android:inputType="text"
             android:singleLine="true"
+            app:layout_constraintBottom_toTopOf="@+id/btn_OpenDeck"
+            app:layout_constraintEnd_toStartOf="@+id/btn_hangman"
+            app:layout_constraintStart_toEndOf="@+id/btn_OpenDeck"
             />
     <ImageButton
             android:id="@+id/btn_clear"
             android:layout_width="28dp"
-            android:layout_height="25dp"
-            app:layout_constraintTop_toTopOf="@+id/text_search"
-            app:layout_constraintEnd_toStartOf="@+id/btn_hangman"
-            android:layout_marginEnd="4dp"
+            android:layout_height="22dp"
             android:src="@android:drawable/btn_dialog"
+            app:layout_constraintBottom_toBottomOf="@+id/text_search"
+            app:layout_constraintStart_toEndOf="@+id/text_search"
+            app:layout_constraintTop_toTopOf="@+id/text_search"
             />
 </androidx.constraintlayout.widget.ConstraintLayout>
