--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -4,55 +4,47 @@
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?android:attr/selectableItemBackground"
+        android:background="@drawable/item_background"
         android:padding="4dp"
         >
     <TextView
             android:id="@+id/lemma_gr"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/speaker"
+            android:fontFamily="@font/tinos_italic"
             android:paddingTop="4dp"
             android:paddingBottom="4dp"
-            android:fontFamily="sans-serif"
-            android:textColor="#0037FF"
-            android:textSize="18sp"
+            android:textColor="@color/kobaltblauw"
+            android:textSize="20sp"
             android:textStyle="normal|italic"
+            app:layout_constraintEnd_toStartOf="@+id/speaker"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             />
     <TextView
             android:id="@+id/speaker"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/divider"
             android:gravity="center"
             android:text="@string/speak"
             android:textAlignment="center"
             android:textColor="#757575"
             android:textSize="24sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             />
     <TextView
             android:id="@+id/meaning_nl"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/lemma_gr"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/speaker"
+            android:fontFamily="sans-serif"
             android:paddingTop="4dp"
             android:paddingBottom="4dp"
-            android:fontFamily="sans-serif"
             android:textColor="#757575"
             android:textSize="15sp"
-            />
-    <View
-            android:id="@+id/divider"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
+            app:layout_constraintEnd_toStartOf="@id/speaker"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:background="?android:attr/listDivider"
+            app:layout_constraintTop_toBottomOf="@id/lemma_gr"
             />
 </androidx.constraintlayout.widget.ConstraintLayout>
