--- a/app/src/main/res/layout/verb_game.xml
+++ b/app/src/main/res/layout/verb_game.xml
@@ -7,6 +7,17 @@
         tools:context=".VerbGame"
         tools:ignore="HardcodedText"
         >
+    <Button
+            android:id="@+id/btn_verbal"
+            android:layout_width="@dimen/nav_btn_width"
+            android:layout_height="@dimen/nav_btn_height"
+            android:layout_marginBottom="8dp"
+            android:text="@string/speak"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/btn_previous"
+            app:layout_constraintStart_toEndOf="@+id/btn_show_ladder"
+            />
     <TextView
             android:id="@+id/text_ask"
             android:layout_width="match_parent"
@@ -14,6 +25,8 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="16dp"
+            android:fontFamily="@font/tinos_italic"
+            android:letterSpacing="0.02"
             android:gravity="start|center_vertical"
             android:text="@string/ask"
             android:textColor="@color/kobaltblauw"
@@ -25,35 +38,43 @@
             />
     <TextView
             android:id="@+id/text_reveal"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="16dp"
+            android:fontFamily="@font/tinos"
             android:gravity="start|center_vertical"
             android:text="@string/reveal"
-            android:textSize="16sp"
-            android:visibility="visible"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text_ask"
             />
     <Button
             android:id="@+id/btn_go"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/nav_btn_height"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="8dp"
             android:text="@string/volgende"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             />
     <Button
+            android:id="@+id/btn_previous"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/nav_btn_height"
+            android:layout_marginBottom="8dp"
+            android:text="vorige"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/btn_go"
+            />
+    <Button
             android:id="@+id/btn_show_ladder"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/nav_btn_height"
             android:layout_marginStart="8dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="8dp"
             android:text="@string/laat_zien"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -62,8 +83,8 @@
             android:id="@+id/sw_mode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginStart="96dp"
+            android:layout_marginBottom="4dp"
             android:text="Vervoegen "
             android:textColor="?attr/colorAccent"
             android:textSize="16sp"
@@ -76,7 +97,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
-            android:layout_marginBottom="12dp"
+            android:layout_marginBottom="8dp"
+            android:labelFor="@id/sw_mode"
             android:text="Herkennen"
             android:textColor="@android:color/background_dark"
             android:textSize="16sp"
@@ -88,11 +110,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="4dp"
-            android:checked="true"
+            android:layout_marginTop="8dp"
+            android:checked="false"
             android:text="Ενεστώτας"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/divider3"
+            app:layout_constraintTop_toBottomOf="@+id/lbl_tijdsvorm"
             />
     <CheckBox
             android:id="@+id/chk_mellontas"
@@ -108,6 +130,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:checked="true"
             android:text="Αόριστος"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/chk_mellontas"
@@ -125,7 +148,7 @@
             android:id="@+id/divider2"
             android:layout_width="409dp"
             android:layout_height="1dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="8dp"
             android:background="?android:attr/listDivider"
             app:layout_constraintBottom_toTopOf="@+id/btn_go"
             app:layout_constraintEnd_toEndOf="parent"
@@ -136,11 +159,11 @@
             android:layout_width="409dp"
             android:layout_height="1dp"
             android:layout_marginEnd="2dp"
-            android:layout_marginBottom="4dp"
+            android:layout_marginBottom="8dp"
             android:background="?android:attr/listDivider"
-            app:layout_constraintBottom_toTopOf="@+id/chk_1"
+            app:layout_constraintBottom_toTopOf="@+id/lbl_persoonsvorm"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             />
     <View
@@ -157,12 +180,13 @@
             />
     <TextView
             android:id="@+id/txt_conjugations"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:fontFamily="@font/tinos_italic"
             android:text="TextView"
-            android:textSize="18sp"
+            android:textSize="20sp"
             android:visibility="invisible"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text_reveal"
@@ -184,6 +208,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:checked="true"
             android:onClick="onPersonClick"
             android:text="εσύ"
             android:textSize="14sp"
@@ -195,6 +220,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:checked="true"
             android:onClick="onPersonClick"
             android:text="αυτός, -ή, -ό"
             android:textSize="14sp"
@@ -206,6 +232,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:checked="true"
             android:onClick="onPersonClick"
             android:text="εμείς"
             android:textSize="14sp"
@@ -217,18 +244,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:checked="true"
             android:onClick="onPersonClick"
             android:text="εσείς"
             android:textSize="14sp"
             app:layout_constraintBottom_toTopOf="@+id/chk_6"
-            app:layout_constraintStart_toEndOf="@+id/divider4"
 
+            app:layout_constraintStart_toEndOf="@+id/divider4"
             />
     <CheckBox
             android:id="@+id/chk_6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:checked="true"
             android:onClick="onPersonClick"
             android:text="αυτοί, -ές, -ά"
             android:textSize="14sp"
@@ -262,22 +291,55 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:layout_marginBottom="0dp"
+            android:layout_marginEnd="16dp"
             android:background="@color/labelBackground"
             android:paddingStart="3dp"
             android:paddingEnd="3dp"
             android:text="@string/level"
             android:textColor="@color/border_color"
             android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/divider6"
             app:layout_constraintTop_toBottomOf="@id/divider3"
-            app:layout_constraintStart_toEndOf="@id/divider6"
-        />
+            />
+    <TextView
+            android:id="@+id/lbl_persoonsvorm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:background="@color/labelBackground"
+            android:paddingStart="3dp"
+            android:paddingEnd="3dp"
+            android:text="Persoonsvorm:"
+            android:textColor="@color/border_color"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/chk_1"
+            app:layout_constraintEnd_toStartOf="@+id/divider6"
+            app:layout_constraintStart_toEndOf="@+id/divider4"
+            />
+    <TextView
+            android:id="@+id/lbl_tijdsvorm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/labelBackground"
+            android:paddingStart="3dp"
+            android:paddingEnd="3dp"
+            android:text="Tijdsvorm:"
+            android:textColor="@color/border_color"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/divider4"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/divider3"
+            />
     <Switch
             android:id="@+id/sw_level_basis"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
+            android:checked="true"
             android:text="@string/basis"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/lbl_level"
@@ -288,6 +350,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
+            android:checked="false"
             android:text="@string/advanced"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/sw_level_basis"
@@ -298,8 +361,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
+            android:checked="false"
             android:text="@string/nice_to_know"
-            app:layout_constraintTop_toBottomOf="@+id/sw_level_gevorderd"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/sw_level_gevorderd"
             />
 </androidx.constraintlayout.widget.ConstraintLayout>
