Verb Game Imperative added

--- a/app/src/main/res/layout/verb_game.xml
+++ b/app/src/main/res/layout/verb_game.xml
@@ -267,12 +267,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:layout_marginBottom="16dp"
             android:checked="true"
             android:onClick="onPersonClick"
             android:text="αυτοί, -ές, -ά"
             android:textSize="14sp"
-            app:layout_constraintStart_toEndOf="@+id/divider_vert_1"
             app:layout_constraintBottom_toTopOf="@+id/divider2"
+            app:layout_constraintStart_toEndOf="@+id/divider_vert_1"
             />
     <View
             android:id="@+id/divider_vert_2"
@@ -300,23 +301,37 @@
             android:id="@+id/sw_level_gevorderd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
             android:checked="false"
             android:text="@string/advanced"
-            app:layout_constraintTop_toBottomOf="@+id/sw_level_basis"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/sw_level_basis"
             />
     <Switch
             android:id="@+id/sw_level_ballast"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
             android:checked="false"
             android:text="@string/nice_to_know"
-            app:layout_constraintTop_toBottomOf="@+id/sw_level_gevorderd"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/sw_level_gevorderd"
+            />
+    <Chronometer
+
+            android:id="@+id/chronometer"
+
+            android:layout_width="wrap_content"
+
+            android:layout_height="wrap_content"
+
+            android:layout_marginEnd="8dp"
+            android:format="%s"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/sw_level_ballast"
             />
     <View
             android:id="@+id/divider2"
@@ -324,47 +339,122 @@
             android:layout_height="1dp"
             android:layout_marginBottom="8dp"
             android:background="?android:attr/listDivider"
-            app:layout_constraintBottom_toTopOf="@+id/btn_go"
+            app:layout_constraintBottom_toTopOf="@+id/btn_fout"
             app:layout_constraintStart_toStartOf="parent"
             />
     <Button
             android:id="@+id/btn_show_ladder"
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="@dimen/nav_btn_height"
-            android:layout_marginStart="8dp"
             android:layout_marginBottom="8dp"
-            android:text="@string/laat_zien"
-            app:layout_constraintStart_toStartOf="parent"
+            android:text="rijtje"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/btn_verbal"
             />
     <Button
             android:id="@+id/btn_verbal"
-            android:layout_width="wrap_content"
+            android:layout_width="60dp"
             android:layout_height="@dimen/nav_btn_height"
             android:layout_marginBottom="8dp"
             android:text="@string/speak"
             android:textSize="24sp"
-            app:layout_constraintStart_toEndOf="@+id/btn_show_ladder"
-            app:layout_constraintEnd_toStartOf="@+id/btn_previous"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             />
     <Button
             android:id="@+id/btn_previous"
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="@dimen/nav_btn_height"
             android:layout_marginBottom="8dp"
-            android:text="vorige"
-            app:layout_constraintEnd_toStartOf="@+id/btn_go"
+            android:text="prev"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/btn_show_ladder"
+            />
+    <Button
+            android:id="@+id/btn_fout"
+            android:layout_width="80dp"
+            android:layout_height="@dimen/nav_btn_height"
+            android:layout_marginBottom="8dp"
+            android:text="FOUT"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/btn_go"
             />
     <Button
             android:id="@+id/btn_go"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="@dimen/nav_btn_height"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:text="@string/volgende"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:text="GOED"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+    <TextView
+            android:id="@+id/lbl_total"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:gravity="right"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/divider_vert_2"
+            app:layout_constraintTop_toBottomOf="@+id/chronometer"
+            tools:text="totaal"
+            />
+    <TextView
+            android:id="@+id/lbl_max"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="8dp"
+            android:gravity="right"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/divider_vert_2"
+            app:layout_constraintTop_toBottomOf="@+id/lbl_total"
+            tools:text="max"
+            />
+    <TextView
+            android:id="@+id/lbl_min"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="1dp"
+            android:layout_marginEnd="8dp"
+            android:gravity="right"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/divider_vert_2"
+            app:layout_constraintTop_toBottomOf="@+id/lbl_max"
+            tools:text="minimum"
+            />
+    <TextView
+            android:id="@+id/lbl_average"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="8dp"
+            android:gravity="right"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/divider_vert_2"
+            app:layout_constraintTop_toBottomOf="@+id/lbl_min"
+            tools:text="gemiddelde"
+            />
+    <TextView
+            android:id="@+id/lbl_count"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="8dp"
+            android:gravity="right"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/divider_vert_2"
+            app:layout_constraintTop_toBottomOf="@+id/lbl_average"
+            tools:text="aantal"
             />
 </androidx.constraintlayout.widget.ConstraintLayout>
