--- a/app/src/main/res/layout/filter_and_sort.xml
+++ b/app/src/main/res/layout/filter_and_sort.xml
@@ -10,7 +10,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
 
-        tools:context=".Selecties"
+        tools:context=".FilterAndSort"
         tools:ignore="Autofill"
         >
 
