--- a/app/src/main/res/layout/wordgroup_wordtype.xml
+++ b/app/src/main/res/layout/wordgroup_wordtype.xml
@@ -4,46 +4,46 @@
         android:layout_height="match_parent"
         >
     <TextView
-            android:id="@+id/lbl_groep"
+            android:id="@+id/lbl_wordgroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="@id/lst_groep"
+            app:layout_constraintEnd_toEndOf="@id/lst_wordgroup"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:text="@string/wordgroup"
             android:textAlignment="center"
             />
     <TextView
-            android:id="@+id/lblWoodsoort"
+            android:id="@+id/lbl_wordtype"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="@id/lst_woordsoort"
+            app:layout_constraintStart_toStartOf="@id/lst_wordtype"
             app:layout_constraintEnd_toEndOf="parent"
             android:text="@string/wordtype"
             android:textAlignment="center"
             />
     <ListView
-            android:id="@+id/lst_groep"
+            android:id="@+id/lst_wordgroup"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintTop_toBottomOf="@id/lbl_groep"
+            app:layout_constraintTop_toBottomOf="@id/lbl_wordgroup"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toTopOf="@id/btn_select"
-            app:layout_constraintEnd_toStartOf="@id/lst_woordsoort"
+            app:layout_constraintEnd_toStartOf="@id/lst_wordtype"
             android:layout_marginStart="4dp"
             android:background="@drawable/backgroundborder"
             android:choiceMode="singleChoice"
             android:scrollbars="vertical"
             />
     <ListView
-            android:id="@+id/lst_woordsoort"
+            android:id="@+id/lst_wordtype"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintTop_toBottomOf="@id/lblWoodsoort"
-            app:layout_constraintStart_toEndOf="@+id/lst_groep"
+            app:layout_constraintTop_toBottomOf="@id/lbl_wordtype"
+            app:layout_constraintStart_toEndOf="@+id/lst_wordgroup"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@id/btn_select"
             android:layout_marginStart="8dp"
