--- a/app/src/main/res/layout/verb_game.xml
+++ b/app/src/main/res/layout/verb_game.xml
@@ -42,17 +42,16 @@
             />
     <TextView
             android:id="@+id/txt_conjugations"
-            android:layout_width="match_parent"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:text=""
+            android:layout_marginTop="8dp"
             android:fontFamily="@font/tinos_italic"
+            android:text=""
             android:textSize="20sp"
             android:visibility="invisible"
-            app:layout_constraintTop_toBottomOf="@+id/text_reveal"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_reveal"
             />
     <View
             android:id="@+id/divider5"
@@ -330,8 +329,8 @@
             android:layout_marginEnd="8dp"
             android:format="%s"
             android:textSize="24sp"
+            app:layout_constraintBottom_toTopOf="@+id/divider5"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/sw_level_ballast"
             />
     <View
             android:id="@+id/divider2"
@@ -347,7 +346,8 @@
             android:layout_width="80dp"
             android:layout_height="@dimen/nav_btn_height"
             android:layout_marginBottom="8dp"
-            android:text="rijtje"
+            android:text="Rijtje"
+            android:textAllCaps="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/btn_verbal"
             />
@@ -366,7 +366,9 @@
             android:layout_width="80dp"
             android:layout_height="@dimen/nav_btn_height"
             android:layout_marginBottom="8dp"
-            android:text="prev"
+            android:text="vorige"
+            android:textAllCaps="false"
+            android:textColor="@color/design_default_color_primary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/btn_show_ladder"
             />
@@ -375,7 +377,9 @@
             android:layout_width="80dp"
             android:layout_height="@dimen/nav_btn_height"
             android:layout_marginBottom="8dp"
-            android:text="FOUT"
+            android:text="Opnieuw"
+            android:textAllCaps="false"
+            android:textColor="@android:color/holo_red_light"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btn_go"
             />
@@ -385,7 +389,9 @@
             android:layout_height="@dimen/nav_btn_height"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:text="GOED"
+            android:text="Ga door"
+            android:textAllCaps="false"
+            android:textColor="@color/colorPrimaryDark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             />
@@ -394,67 +400,24 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:gravity="right"
-            android:textSize="12sp"
+            android:gravity="start"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toTopOf="@+id/chronometer"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/divider_vert_2"
-            app:layout_constraintTop_toBottomOf="@+id/chronometer"
             tools:text="totaal"
-            />
-    <TextView
-            android:id="@+id/lbl_max"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:layout_marginEnd="8dp"
-            android:gravity="right"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/divider_vert_2"
-            app:layout_constraintTop_toBottomOf="@+id/lbl_total"
-            tools:text="max"
-            />
-    <TextView
-            android:id="@+id/lbl_min"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="1dp"
-            android:layout_marginEnd="8dp"
-            android:gravity="right"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/divider_vert_2"
-            app:layout_constraintTop_toBottomOf="@+id/lbl_max"
-            tools:text="minimum"
-            />
-    <TextView
-            android:id="@+id/lbl_average"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:layout_marginEnd="8dp"
-            android:gravity="right"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/divider_vert_2"
-            app:layout_constraintTop_toBottomOf="@+id/lbl_min"
-            tools:text="gemiddelde"
             />
     <TextView
             android:id="@+id/lbl_count"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
             android:layout_marginEnd="8dp"
-            android:gravity="right"
-            android:textSize="12sp"
+            android:gravity="start"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toTopOf="@+id/lbl_total"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/divider_vert_2"
-            app:layout_constraintTop_toBottomOf="@+id/lbl_average"
             tools:text="aantal"
             />
 </androidx.constraintlayout.widget.ConstraintLayout>
