--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -5,7 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/item_background"
-        android:padding="4dp"
+        android:paddingStart="4dp"
         >
     <TextView
             android:id="@+id/lemma_gr"
