Verb Game Imperative added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -83,7 +83,7 @@
             style="@android:style/Widget.ImageButton"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:contentDescription="Werkwoordjes oefenen"
+            android:contentDescription="@string/werkwoordjes_oefenen"
             android:scaleType="centerCrop"
             android:src="@drawable/werkinuitvoering"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -94,7 +94,7 @@
             style="@android:style/Widget.ImageButton"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:contentDescription="Luister oefening"
+            android:contentDescription="@string/luister_oefening"
             android:scaleType="centerCrop"
             android:src="@drawable/oor"
             app:layout_constraintBottom_toBottomOf="parent"
