--- a/app/src/main/res/layout/luisterlijst.xml
+++ b/app/src/main/res/layout/luisterlijst.xml
@@ -12,7 +12,7 @@
             android:layout_width="@dimen/nav_btn_width"
             android:layout_height="@dimen/nav_btn_height"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="16dp"
             android:text="@string/btn_caption_next_block"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -22,22 +22,24 @@
             android:id="@+id/btn_prev_block"
             android:layout_width="@dimen/nav_btn_width"
             android:layout_height="@dimen/nav_btn_height"
-            android:layout_marginBottom="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="16dp"
             android:text="@string/btn_caption_prev_block"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/btn_next_block"
+            app:layout_constraintStart_toStartOf="parent"
             />
     <Button
-            android:id="@+id/btn_leeslijst"
+            android:id="@+id/btn_play"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/speak"
-            android:textSize="56sp"
+            android:layout_marginBottom="16dp"
+            android:gravity="center"
+            android:text="@string/btn_caption_play"
+            android:textSize="44sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             />
     <TextView
             android:id="@+id/tv_lemma"
@@ -68,13 +70,35 @@
             android:id="@+id/tv_blockpos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
             android:layout_marginBottom="8dp"
-            android:text=""
+            android:text="@string/one_one"
             android:textSize="24sp"
             android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/btn_play"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            />
+    <ImageView
+            android:id="@+id/iv_thatsall"
+            android:layout_width="347dp"
+            android:layout_height="166dp"
+            android:layout_marginTop="16dp"
+            android:contentDescription="@string/thatsall"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_meaning"
+            app:srcCompat="@drawable/thatsall"
+            />
+    <Button
+            android:id="@+id/btn_rewind"
+            android:layout_width="88dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:text="@string/btn_caption_rewind"
+            android:textSize="44sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/btn_prev_block"
             />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
