--- a/app/src/main/res/layout/luisterlijst.xml
+++ b/app/src/main/res/layout/luisterlijst.xml
@@ -6,7 +6,6 @@
         android:layout_height="match_parent"
         tools:context=".Luisterlijst"
         >
-
     <Button
             android:id="@+id/btn_next_block"
             android:layout_width="@dimen/nav_btn_width"
@@ -15,8 +14,8 @@
             android:layout_marginBottom="16dp"
             android:text="@string/btn_caption_next_block"
             android:textSize="24sp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             />
     <Button
             android:id="@+id/btn_prev_block"
@@ -26,8 +25,8 @@
             android:layout_marginBottom="16dp"
             android:text="@string/btn_caption_prev_block"
             android:textSize="24sp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             />
     <Button
             android:id="@+id/btn_play"
@@ -37,12 +36,12 @@
             android:gravity="center"
             android:text="@string/btn_caption_play"
             android:textSize="44sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             />
     <TextView
-            android:id="@+id/tv_lemma"
+            android:id="@+id/txt_lemma"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -50,44 +49,42 @@
             android:textColor="@color/border_color"
             android:textSize="30sp"
             android:textStyle="italic"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             />
     <TextView
-            android:id="@+id/tv_meaning"
+            android:id="@+id/txt_meaning"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:gravity="center"
             android:textSize="24sp"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txt_lemma"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_lemma"
+            app:layout_constraintEnd_toEndOf="parent"
             />
     <TextView
-            android:id="@+id/tv_blockpos"
+            android:id="@+id/txt_blockpos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:text="@string/one_one"
+            android:layout_marginBottom="16dp"
             android:textSize="24sp"
-            android:visibility="visible"
-            app:layout_constraintBottom_toTopOf="@+id/btn_play"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/btn_play"
+            tools:text="0-0"
             />
     <ImageView
-            android:id="@+id/iv_thatsall"
-            android:layout_width="347dp"
+            android:id="@+id/img_thatsall"
+            android:layout_width="344dp"
             android:layout_height="166dp"
             android:layout_marginTop="16dp"
             android:contentDescription="@string/thatsall"
             android:visibility="invisible"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txt_meaning"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_meaning"
+            app:layout_constraintEnd_toEndOf="parent"
             app:srcCompat="@drawable/thatsall"
             />
     <Button
@@ -97,8 +94,36 @@
             android:layout_marginBottom="16dp"
             android:text="@string/btn_caption_rewind"
             android:textSize="44sp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/btn_prev_block"
+            app:layout_constraintBottom_toBottomOf="parent"
             />
-
+    <SeekBar
+            android:id="@+id/sb_speed"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:max="20"
+            android:min="5"
+            android:progress="10"
+            app:layout_constraintStart_toEndOf="@+id/lbl_speed"
+            app:layout_constraintBottom_toTopOf="@+id/txt_blockpos"
+            />
+    <TextView
+            android:id="@+id/lbl_speed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="@string/tempo"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/sb_speed"
+            />
+    <TextView
+            android:id="@+id/txt_speed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/pct100"
+            android:textSize="18sp"
+            app:layout_constraintStart_toEndOf="@+id/sb_speed"
+            app:layout_constraintBottom_toBottomOf="@+id/sb_speed"
+            />
 </androidx.constraintlayout.widget.ConstraintLayout>
